--- a/src/serv.html
+++ b/src/serv.html
@@ -11,6 +11,7 @@
               </li>
               <li class="breadcrumbs__item">
                 <a href="#" class="breadcrumbs__link">
+                    <svg class="icon icon-breadcrumb"><use xlink:href="#icon-breadcrumb"></use></svg>
                   Услуги
                 </a>
               </li>
