--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
         <a href="./home.html" target="_blank">Главная</a>
       </li>
       <li>
+        <a href="./about.html" target="_blank">О компании</a>
+      </li>
+      <li>
         <a href="./serv.html" target="_blank">Услуги</a>
       </li>
     </ul>
